# pcs-meta-repo

./: .gitattributes  .gitignore  .gitignore_kenlm_models  .markdownlint-cli2.jsonc  .markdownlint-cli2.yaml  .markdownlint.json  .markdownlintignore  .osfcli.config  .pre-commit-config.yaml  .yamllint  .zenodo.json  .zenodo.release.json  CHANGELOG.md  CHANGELOG_v4.3.2.md  CHANGELOG_v4.3.3.md  CHANGELOG_v4.3.md  CHANGELOG_v4.3_addendum.md  CITATION.cff  CITATION.release.cff  CITATION_v4.3.2.cff  CITATION_v4.3.3.cff  CITATION_v4.3.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  CURADORIA_ACADEMICA_REPORT.md  DATA_DICTIONARY.md  INSTALL.md  LICENSE  Makefile  Memoria_Estendida_PHD_Brasil_2025-08-29.md  PM43_DeepResearch_5pro_SYSTEM.md  PM43_DeepResearch_5pro_USER.md  PROVENANCE.yaml  PULL_REQUEST_TEMPLATE.md  QUALITY_GATES.md  README.md  README_RAGPP.md  README_v4.3.md  RELEASE_NOTES_v4.3.2.md  (+24 more)
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.safety/: status-20250825-144406.txt  status-agents-1756160726.txt  status-md-1756156363.txt  status-md-agents-1756162637.txt  status-md-pass-1756159783.txt  status-yaml-1756159093.txt
LICENSES/: CC-BY-4.0.txt
appendices/: epilogue_equation.tex  symbolic_density.tex
code/: README  box_count_dimension.py  mc_sim.py  plot_H2.py  plot_figs.py  run_grid.py  run_rupture.py
config/: data_root.yaml  datasets.yaml  zuco_performance.yaml
configs/: cuda_llama7b_q4.yaml  lmstudio_api.yaml
data/: provenance.yaml
docs/: GOVERNANCE_v4.4.md  INSTRUCOES_PROJETO.md  NOTEBOOK_STYLE_GUIDE.md  NUMERICS_GUIDE.md  Notebook_01_Data_Preprocessing_and_Network_Construction.html  README_DATA.md  README_LOADER.md  README_MASTER.md  RUNBOOK_minimal_v4.4.md  agentic_design_patterns.md  architecture.dot  architecture.mmd  doi_consolidation_v43.md  fig_plan.md  qgates_checklist_v1.md  roadmap_12m_symbolic_first.md
duplicates_backup_20250828_222250/: .markdownlint 2.jsonc  .markdownlint 2.yaml  .markdownlint-cli2 2.jsonc  .pre-commit-config 2.yaml  .pre-commit-config.yaml 2.bak  .yamllint 2.yaml  01_swow_multilingual_pilot 2.py  CHANGELOG_PATCH_2025-08-23 2.md  CURADORIA_ACADEMICA_REPORT 2.md  METADATA_ZENODO_PATCH_2025-08-23 2.md  PCS_Cultural_Lens_Pilot 2.md  PM_PCS-HELIO_v4.1_compacto_snippet_2025-08-23 2.txt  Ponte_Epistemologica-Epidemiologica_PCS-HELIO_v1.0_2025-08-23 2.md  (+9 more)
src/pcs_toolbox/: __init__.py  analysis.py  common.py  kec.py  pyproject.toml  swow.py  zuco.py
(+509 files in other folders)
