[project]
name = "pcs_toolbox"
version = "0.2.1"
description = "Tools for the PCS project"
authors = [{name = "Demetrios Agourakis", email = "demetrios@agourakis.med.br"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.2.1",
    "numpy>=1.26.4",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
known_first_party = ["pcs_toolbox"]
line_length = 88
